--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ GA_TRACKING_ID=YOUR_GA_TRACKING_ID
 VITE_HOMEPOD_BASE_URL=https://api.homepod.storipod.app/
 VITE_STORIPOD_BASE_URL=https://api.storipod.app/
 VITE_MAX_CHARACTER_COUNT=360
+VITE_FLW_PUBLIC_KEY= FLWPUBK_TEST-84758033044f72212e2aaa7a81f56c45-X
